[package]
name = "patate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

byteorder = "1.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
log = { version = "0.4.17" }
simplelog = { version = "0.12.0", features = ["paris"] }
